add GC for bootstart